<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_16" />

    <TextView
        android:id="@+id/title"
        style="@style/Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_page_title_top"
        android:text="@string/title_catalog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconSortBy"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginTop="@dimen/margin_22"
        android:src="@drawable/icon_sort_by"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="ContentDescription" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:dropDownSelector="@drawable/icon_down_arrow"
        app:layout_constraintBottom_toBottomOf="@id/iconSortBy"
        app:layout_constraintStart_toEndOf="@id/iconSortBy"
        app:layout_constraintTop_toTopOf="@id/iconSortBy" />

    <ImageView
        android:id="@+id/iconFilter"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginTop="@dimen/margin_22"
        android:layout_marginEnd="@dimen/margin_8"
        android:src="@drawable/icon_filter"
        app:layout_constraintEnd_toStartOf="@id/tvFilters"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvFilters"
        style="@style/Title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_filters"
        app:layout_constraintBottom_toBottomOf="@id/iconFilter"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintTop_toTopOf="@id/iconFilter" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="iconSortBy, spinner, iconFilter, tvFilters" />

    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_17"
        android:orientation="horizontal"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/barrier">

        <LinearLayout
            android:id="@+id/tagContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.catalog.ui.customview.TagView
                android:id="@+id/tagViewAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tagViewTagName="all"
                app:tagViewIsSelect="true"
                app:tagViewName="@string/tag_name_all" />

            <com.example.catalog.ui.customview.TagView
                android:id="@+id/tagViewFace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_6"
                app:tagViewTagName="face"
                app:tagViewIsSelect="false"
                app:tagViewName="@string/tag_name_face" />

            <com.example.catalog.ui.customview.TagView
                android:id="@+id/tagViewBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_6"
                app:tagViewTagName="body"
                app:tagViewIsSelect="false"
                app:tagViewName="@string/tag_name_body" />

            <com.example.catalog.ui.customview.TagView
                android:id="@+id/tagViewSuntan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_6"
                app:tagViewTagName="suntan"
                app:tagViewIsSelect="false"
                app:tagViewName="@string/tag_name_suntan" />

            <com.example.catalog.ui.customview.TagView
                android:id="@+id/tagViewMask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_6"
                app:tagViewTagName="mask"
                app:tagViewIsSelect="false"
                app:tagViewName="@string/tag_name_mask" />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/scrollView" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/scrollView"/>

</androidx.constraintlayout.widget.ConstraintLayout>